<?xml version="1.0" encoding="utf-8"?>
<!--
  Root screen is the settings hub: each nested PreferenceScreen renders as one row and opens as
  its own page (SettingsPreferenceFragment inflates this file with the nested screen's key as
  rootKey). Keep screen keys stable; SettingsFragment restores the open page from them.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_color_lens_24"
        app:key="screen_appearance"
        app:summary="@string/settings_appearance_summary"
        app:title="@string/settings_appearance">
        <moe.matsuri.nb4a.ui.ThemePickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue=""
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:icon="@drawable/baseline_translate_24"
            app:key="appLanguage"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="showBottomBar"
            app:title="@string/show_bottom_bar" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_center_focus_weak_24"
            app:key="alwaysShowAddress"
            app:summary="@string/always_show_address_sum"
            app:title="@string/always_show_address" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="confirmProfileDelete"
            app:title="@string/confirm_profile_delete" />
        <SwitchPreference
            app:key="hideFromRecentApps"
            app:summary="@string/hide_from_recent_apps_summary"
            app:title="@string/hide_from_recent_apps" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_hardware_router"
        app:key="screen_connection"
        app:summary="@string/settings_connection_summary"
        app:title="@string/settings_connection">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/tun_implementation"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="tunImplementation"
            app:title="@string/tun_implementation"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.MTUPreference
            app:defaultValue="1500"
            app:entries="@array/mtu_select"
            app:entryValues="@array/mtu_select"
            app:icon="@drawable/baseline_public_24"
            app:key="mtu"
            app:title="@string/mtu" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="strictRoute"
            app:title="@string/strict_route" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="concurrentDial"
            app:summary="@string/concurrent_dial_summary"
            app:title="@string/concurrent_dial" />
        <SwitchPreference
            app:icon="@drawable/ic_device_data_usage"
            app:key="meteredNetwork"
            app:summary="@string/metered_summary"
            app:title="@string/metered" />
        <SwitchPreference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="acquireWakeLock"
            app:summary="@string/acquire_wake_lock_summary"
            app:title="@string/acquire_wake_lock" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="networkChangeResetConnections"
            app:title="@string/network_change_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="wakeResetConnections"
            app:title="@string/wake_reset_connections"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="networkAutomation"
            app:summary="@string/network_automation_summary"
            app:title="@string/network_automation" />
        <Preference
            app:dependency="networkAutomation"
            app:key="networkAutomationRules"
            app:title="@string/network_automation_rules" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_security_24"
        app:key="screen_protection"
        app:summary="@string/settings_protection_summary"
        app:title="@string/settings_protection">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_security_24"
            app:key="killSwitch"
            app:summary="@string/kill_switch_summary"
            app:title="@string/kill_switch" />
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_baseline_fingerprint_24"
            app:key="webrtcLeakProtection"
            app:summary="@string/webrtc_leak_protection_summary"
            app:title="@string/webrtc_leak_protection" />
        <Preference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="protectionAlwaysOn"
            app:title="@string/protection_always_on" />
        <Preference
            app:icon="@drawable/ic_action_lock"
            app:key="protectionLockdown"
            app:title="@string/protection_lockdown" />
        <Preference
            app:icon="@drawable/baseline_developer_board_24"
            app:key="protectionBattery"
            app:title="@string/protection_battery" />
        <Preference
            app:icon="@drawable/ic_baseline_info_24"
            app:key="protectionNotes"
            app:selectable="false"
            app:summary="@string/protection_notes"
            app:title="@string/protection_notes_title" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_maps_directions"
        app:key="screen_route"
        app:summary="@string/settings_route_summary"
        app:title="@string/cag_route">
        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
        <SwitchPreference
            app:key="bypassLanInCore"
            app:title="@string/bypass_lan_in_core" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1"
            app:entries="@array/traffic_sniffing_values"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_manage_search_24"
            app:key="trafficSniffing"
            app:title="@string/traffic_sniffing"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="resolveDestination"
            app:summary="@string/resolve_destination_summary"
            app:title="@string/resolve_destination" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/rules_dat_provider"
            app:entryValues="@array/int_array_5"
            app:icon="@drawable/ic_baseline_rule_folder_24"
            app:key="rulesProvider"
            app:title="@string/route_rules_provider"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://github.com/SagerNet/sing-geosite/releases/latest/download/geosite.db"
            app:key="rulesGeositeUrl"
            app:title="@string/rules_geosite_url"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://github.com/SagerNet/sing-geoip/releases/latest/download/geoip.db"
            app:key="rulesGeoipUrl"
            app:title="@string/rules_geoip_url"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="rulesUpdateInterval"
            app:summary="@string/ruleset_update_interval_summary"
            app:title="@string/ruleset_update_interval" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_action_dns"
        app:key="screen_dns"
        app:summary="@string/settings_dns_summary"
        app:title="@string/cag_dns">
        <EditTextPreference
            app:defaultValue="https://dns.quad9.net/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="remoteDns"
            app:title="@string/remote_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_remote"
            app:title="@string/domain_strategy_for_remote"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue="https://1.1.1.1/dns-query"
            app:icon="@drawable/ic_action_dns"
            app:key="directDns"
            app:title="@string/direct_dns"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_direct"
            app:title="@string/domain_strategy_for_direct"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="auto"
            app:entries="@array/dns_network_select"
            app:entryValues="@array/dns_network_select"
            app:key="domain_strategy_for_server"
            app:title="@string/domain_strategy_for_server"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_camera_24"
            app:key="enableDnsRouting"
            app:summary="@string/dns_routing_message"
            app:title="@string/enable_dns_routing" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_action_lock"
            app:key="enableFakeDns"
            app:summary="@string/fakedns_message"
            app:title="@string/enable_fakedns" />
        <EditTextPreference
            app:defaultValue=""
            app:dialogMessage="@string/dns_hosts_dialog_message"
            app:icon="@drawable/ic_baseline_transform_24"
            app:key="dnsHosts"
            app:title="@string/dns_hosts" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_nat_24"
        app:key="screen_inbound"
        app:summary="@string/settings_inbound_summary"
        app:title="@string/inbound_settings">
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="mixedPort"
            app:title="@string/port_proxy"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="appendHttpProxy"
            app:summary="@string/append_http_proxy_sum"
            app:title="@string/append_http_proxy" />
        <EditTextPreference
            app:key="httpProxyBypass"
            app:summary="@string/http_proxy_bypass_sum"
            app:title="@string/http_proxy_bypass" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_nat_24"
            app:key="allowAccess"
            app:summary="@string/allow_access_sum"
            app:title="@string/allow_access" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="requireProxyInVPN"
            app:summary="@string/require_proxy_in_vpn_sum"
            app:title="@string/require_proxy_in_vpn" />
        <SwitchPreference
            app:defaultValue="false"
            app:key="proxyModeInboundAuth"
            app:summary="@string/proxy_mode_inbound_auth_sum"
            app:title="@string/proxy_mode_inbound_auth" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_notification_enhanced_encryption"
        app:key="screen_tls"
        app:summary="@string/settings_tls_summary"
        app:title="@string/security_settings">
        <SwitchPreference
            app:icon="@drawable/ic_action_lock_open"
            app:key="globalAllowInsecure"
            app:title="@string/global_allow_insecure" />
        <SwitchPreference
            app:key="allowInsecureOnRequest"
            app:title="@string/allow_insecure_on_request_sum" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1.2"
            app:entries="@array/app_tls_version"
            app:entryValues="@array/app_tls_version"
            app:key="appTLSVersion"
            app:title="@string/app_tls_version"
            app:useSimpleSummaryProvider="true" />
        <PreferenceCategory app:title="@string/fragment_settings">
            <SwitchPreference
                app:key="enableTLSFragment"
                app:title="@string/enable_tls_fragment" />
            <EditTextPreference
                app:defaultValue="100-200"
                app:key="fragmentLength"
                app:title="@string/fragment_length"
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                app:defaultValue="10-20"
                app:key="fragmentInterval"
                app:title="@string/fragment_interval"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_speed_24"
        app:key="screen_notification"
        app:summary="@string/settings_notification_summary"
        app:title="@string/settings_notification">
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="1000"
            app:entries="@array/notification_entry"
            app:entryValues="@array/notification_value"
            app:icon="@drawable/ic_baseline_shutter_speed_24"
            app:key="speedInterval"
            app:title="@string/speed_interval"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="profileTrafficStatistics"
            app:summary="@string/profile_traffic_statistics_summary"
            app:title="@string/profile_traffic_statistics" />
        <SwitchPreference
            app:defaultValue="true"
            app:icon="@drawable/ic_baseline_speed_24"
            app:key="showDirectSpeed"
            app:summary="@string/show_direct_speed_sum"
            app:title="@string/show_direct_speed"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:key="showGroupInNotification"
            app:title="@string/show_group_in_notification" />
    </PreferenceScreen>

    <PreferenceScreen
        app:icon="@drawable/ic_baseline_tune_24"
        app:key="screen_advanced"
        app:summary="@string/settings_advanced_summary"
        app:title="@string/settings_advanced">
        <moe.matsuri.nb4a.ui.LongClickListPreference
            app:defaultValue="0"
            app:entries="@array/log_level"
            app:entryValues="@array/int_array_5"
            app:icon="@drawable/ic_baseline_bug_report_24"
            app:key="logLevel"
            app:title="@string/log_level"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.EditConfigPreference
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="globalCustomConfig"
            app:title="@string/custom_config"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/baseline_construction_24"
            app:key="enableClashAPI"
            app:summary="@string/enable_clash_api_summary"
            app:title="@string/enable_clash_api" />
        <moe.matsuri.nb4a.ui.UrlTestPreference
            app:defaultValue="http://www.gstatic.com/generate_204"
            app:icon="@drawable/ic_baseline_cast_connected_24"
            app:key="connectionTestURL"
            app:title="@string/connection_test_url"
            app:useSimpleSummaryProvider="true" />
        <Preference
            app:icon="@drawable/baseline_undo_24"
            app:key="resetSettings"
            app:title="@string/reset_settings" />
        <Preference
            app:icon="@drawable/ic_baseline_delete_24"
            app:key="clearCache"
            app:summary="@string/clear_cache_summary"
            app:title="@string/clear_cache" />
    </PreferenceScreen>

</PreferenceScreen>
